clusters/cluster/apps/redirects/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redirects
  labels:
    name: redirects
